--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "Tic_tac_toe",
    "version": "1.0.0",
-   "description": "Tic tac toe game",
+   "description": "Tic-tac-toe game",
    "type": "module",
    "author": "Anastasia Sidorenko",
    "license": "ISC"
